# SleepDetective

./: .gitignore  README.md  main.py  main_2.py  pyproject.toml  requirements.txt
modules/: ActionTaker.py  AwarenessTracker.py  FacialFeatures.py  GPS.py  GPS2.py  GSM.py  HeadPose.py  HeadTilt.py  PERCLOS.py  SleepTracker.py  VideoCapture.py  VideoViewer.py
templates/: index.html
