[tool.poetry]
name = "sleepdetective"
version = "0.2.0"
description = "Detect drowiness through video imaging."
authors = ["khengari77 <khengari77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.11.0.86"
pyserial = "^3.5"
flask = "^3.1.0"
mediapipe = "^0.10.21"
picamera2 = "^0.3.25"
python-periphery = "^2.4.1"
typer = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
